<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NEU Helper</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="contentDescription">imageView</string>
    
    <!-- Dialog -->
    
    <!-- aboutUsFragment -->
    <string name="who_we_are">join us</string>
    <string name="join_us1">如果你充满想法</string>
    <string name="join_us2">如果你也拥有梦想</string>
    <string name="join_us3">如果你是一个技术控</string>
    <string name="join_us4">那么，加入我们吧</string>
    <string name="contact1">QQ：2328068248</string>
    <string name="contact2">Email:2328068248@qq.com</string>
    
    
    
    
    <!-- LoginFragment -->
    <string name="connect">连接网络</string>
    <string name="disconnect">断开全部连接</string>
    <string name="account"> </string>
    <string name="range"> </string>
    
    <!-- BancheTimeFragment -->
    <string name="from_hunnan">从浑南校区出发</string>
    <string name="from_nanhu">从南湖校区出发</string>
    
    <string name="prompt">选择出发地</string>
    
    <!-- titlebar name -->
    <string name="neu_helper">NEU helper</string>
    <!-- image descript -->
    <string name="icon">neu</string>
    <!-- list菜单 -->
    <string name="ip_login">ip网关登录</string>
    <string name="bancheinfo">校区班车信息</string>
    <string name="about_us">关于我们</string>
    <string name="for_new">发现新版本</string>
    <string name="exit">退出</string>
    
    <!-- 版本更新 -->
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>

    <string-array name="selector">
        <item> 学生</item>
        <item> 老师</item>
    </string-array>

</resources>