<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mlist"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_color_deep" >

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/bg_color_deep"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip" >

            <ImageView
                android:id="@+id/head_view"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/icon"
                android:background="@drawable/default_ipgw" />

            <LinearLayout 
                android:id="@+id/ll_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@+id/head_view"
                android:orientation="horizontal"
                >
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="2dp"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:text="@string/account"/>
                <TextView
	                android:id="@+id/account_tv"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="@color/black"
	                android:textSize="13sp" />
                
            </LinearLayout>
            <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/ll_account"
                android:layout_below="@+id/ll_account"
                >
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="2dp"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:text="@string/range"/>
                <TextView
	                android:id="@+id/range_tv"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="@color/black"
	                android:textSize="13sp" />
                
                
            </LinearLayout>

        </RelativeLayout>

        <include
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            layout="@layout/line" >
        </include>

        <TextView
            android:id="@+id/ip_login"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:background="@drawable/textview_menu"
            android:text="@string/ip_login"
            android:clickable="true"
            android:textColor="@color/text_color"
            android:textSize="15sp" />
<!--
        <include
            android:layout_width="fill_parent"
            android:layout_height="2px"
            layout="@layout/line" >
        </include>

         <TextView
            android:id="@+id/rate_of_flow"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="剩余流量"
            android:clickable="true"
            android:background="@drawable/textview_menu"
            android:textColor="@color/text_color"
            android:textSize="15sp" /> -->

        <include
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            layout="@layout/line" >
        </include>

        <TextView
            android:id="@+id/car_info"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/bancheinfo"
            android:clickable="true"
            android:background="@drawable/textview_menu"
            android:textColor="@color/text_color"
            android:textSize="15sp" />

        <include
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            layout="@layout/line" >
        </include>

        <TextView
            android:id="@+id/about_us"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/about_us"
            android:clickable="true"
            android:background="@drawable/textview_menu"
            android:textColor="@color/text_color"
            android:textSize="15sp" />

        <include
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            layout="@layout/line" >
        </include>

        <TextView
            android:id="@+id/for_new"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/for_new"
            android:clickable="true"
            android:background="@drawable/textview_menu"
            android:textColor="@color/text_color"
            android:textSize="15sp" />

        <include
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            layout="@layout/line" >
        </include>

        <TextView
            android:id="@+id/exit"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/exit"
            android:clickable="true"
            android:background="@drawable/textview_menu"
            android:textColor="@color/text_color"
            android:textSize="15sp" />
    </LinearLayout>

</ScrollView>